add service to get and delete notifications (plus stub fake impl)
