# src/main/resources/openapi/MobileAppAPI.yaml
@@ -148,7 +148,37 @@ paths:
           $ref: '#/components/responses/UnauthorizedApiKey'
         '404':
           description: unknown notification service
+  /notifications:
+    get:
+      operationId: listPushNotifications
+      tags:
+        - Notifications
+      responses:
+        '200':
+          description: return a list of all notifications for current participant
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/PushNotification'
 
+  /notifications/{msgId}:
+    delete:
+      operationId: deleteNotification
+      tags:
+        - Notifications
+      parameters:
+        - name: msgId
+          in: path
+          schema:
+            type: string
+          required: true
+      responses:
+        '200':
+          description: deleted successfully
+        '400':
+          description: not found
   /data/bulk:
     post:
       operationId: storeBulk
@@ -331,6 +361,24 @@ components:
         - deviceId
         - consentInfoMD5
         - observations
+
+    PushNotification:
+      description: a push notification
+      type: object
+      properties:
+        type:
+          type: string
+          enum:
+            - 'text'
+            - 'data'
+        msgId:
+          type: string
+        title:
+          type: string
+        body:
+          type: string
+        data:
+          type: object
 
     AppConfiguration:
       description: |
